# qt-morsecode

./: CMakeLists.txt  README.md
.github/workflows/: build-qt.yml  build.yml
MorseCode/: CMakeLists.txt  Converter.cpp  ConverterInterface.h  constants.h  converter.h  converter_interface.h  plaintext_morse_converter.cpp  plaintext_morse_converter.h  widget.cpp  widget.h  widget.ui
src/: CMakeLists.txt  plaintext_morse_converter.cpp  widget.ui
tests/: CMakeLists.txt  plaintext_morse_converter_test.cpp
